<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <View
        android:id="@+id/status_sp2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/guillotine_background"></View>


    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/screen_color"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/screen_color" />

        <com.flashlightfree.view.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/ScreenLight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_color"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/warning" />

        <com.flashlightfree.view.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:textColor="#FFD700"
            android:text="@string/WarningLight" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/plice_color"
    style="@style/LinearLayout.GuillotineItem">

    <ImageView
        android:layout_height="20dp"
        android:layout_width="20dp"
        style="@style/ImageView.GuillotineItem"
        android:src="@drawable/police" />

    <com.flashlightfree.view.CanaroTextView
        style="@style/TextView.GuillotineItem"
        android:textColor="#3A5FCD"
        android:text="@string/PoliceLight" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/sos_color"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/sos" />

        <com.flashlightfree.view.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:textColor="#EE6363"
            android:text="@string/SOSLight" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/auto_ll"
        style="@style/LinearLayout.GuillotineItem">
        <CheckBox
            android:id="@+id/auto_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/autocheck"
            style="@style/ImageView.GuillotineItem"
            />

        <com.flashlightfree.view.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/auto" />
    </LinearLayout>
</LinearLayout>